// Copyright 2020 Anapaya Systems
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/go/pkg/proto/control_plane";

package proto.control_plane.v1;

service ChainRenewalService {
    // RenewChain creates a chain from the chain request.
    rpc ChainRenewal(ChainRenewalRequest) returns (ChainRenewalResponse) {}
}

message ChainRenewalRequest {
    // Raw is the raw signed request in the legacy format.
    bytes raw = 1000;
}

message ChainRenewalResponse {
    // Raw is the raw signed chain in the legacy format.
    bytes raw = 1000;
}
